Redesigned carTest class