@@ -4,16 +4,14 @@ import cs_393_TZS.car_rental_application.DTO.CarDTO;
 import cs_393_TZS.car_rental_application.model.Car;
 import cs_393_TZS.car_rental_application.model.CarStatus;
 import cs_393_TZS.car_rental_application.model.CarType;
-import cs_393_TZS.car_rental_application.repository.CarRepository;
+import cs_393_TZS.car_rental_application.service.CarService;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 
 import java.util.List;
-import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -23,63 +21,72 @@ class CarServiceTest {
     @Autowired
     private CarService carService;
 
-    //Test Object: Car
-    Long barcode = 1L;
-    String licensePlate = "A1B2C3";
-    int passengerCapacity = 4;
-    String brand = "Toyota";
-    String model = "Corolla";
-    double mileage = 123.2;
-    String transmissionType = "Manual";
-    double dailyPrice = 112.2;
-    CarType carType = CarType.STANDARD;
-    CarStatus carStatus = CarStatus.AVAILABLE;
-
-    Car carObject = new Car(barcode, licensePlate, passengerCapacity, brand,
-            model, mileage, transmissionType, dailyPrice , carType, carStatus);
-
     @AfterEach
-    void deleteAll(){
+    void deleteAll() {
         carService.deleteAll();
+        List<CarDTO> allCars = carService.findCarsByStatus(CarStatus.AVAILABLE);
+        assertTrue(allCars.isEmpty(), "Database is not empty after deleteAll!");
+    }
+
+    private Car createTestCar() {
+        return new Car(1L, "A1B2C3",
+                4, "Toyota", "Corolla",
+                123.2, "Manual", 112.2,
+                CarType.STANDARD, CarStatus.AVAILABLE);
     }
 
     @Test
     void toCarDTO() {
-        CarDTO testObjectDTO = carService.toCarDTO(carObject);
-        assertEquals(carObject.getLicensePlate(), testObjectDTO.getLicensePlate());
+        Car car = createTestCar();
+        CarDTO carDTO = carService.toCarDTO(car);
+        assertEquals(car.getLicensePlate(), carDTO.getLicensePlate());
+        assertEquals(car.getBrand(), carDTO.getBrand());
+        assertEquals(car.getStatus(), carDTO.getStatus());
     }
 
     @Test
     void toCar() {
-        CarDTO testObjectDTO = carService.toCarDTO(carObject);
-        Car revertedCar = carService.toCar(testObjectDTO);
-        assertEquals(carObject.getBarcode(), revertedCar.getBarcode());
+        Car car = createTestCar();
+        CarDTO carDTO = carService.toCarDTO(car);
+        Car revertedCar = carService.toCar(carDTO);
+        assertEquals(car.getBarcode(), revertedCar.getBarcode());
+        assertEquals(car.getBrand(), revertedCar.getBrand());
     }
-
 
     @Test
     void saveCarDTOAndFindByStatus() {
-        CarDTO testObjectDTO = carService.toCarDTO(carObject);
-        CarDTO savedCarDTO = carService.saveCarDTO(testObjectDTO);
-        List<CarDTO> foundCar = carService.findCarsByStatus(CarStatus.AVAILABLE);
-        assertEquals(savedCarDTO.getBarcode(), foundCar.getFirst().getBarcode());
+        Car car = createTestCar();
+        CarDTO carDTO = carService.toCarDTO(car);
+        carService.saveCarDTO(carDTO);
+        List<CarDTO> foundCars = carService.findCarsByStatus(CarStatus.AVAILABLE);
+        assertFalse(foundCars.isEmpty());
+        assertEquals(carDTO.getBarcode(), foundCars.get(0).getBarcode());
     }
 
     @Test
     void saveCarDTOAndFindByBarcode() {
-        CarDTO testObjectDTO = carService.toCarDTO(carObject);
-        CarDTO savedCarDTO = carService.saveCarDTO(testObjectDTO);
-        List<CarDTO> foundCar = carService.findCarsByBarcode(savedCarDTO.getBarcode());
-        assertEquals(savedCarDTO.getBarcode(), foundCar.getFirst().getBarcode());
+        Car car = createTestCar();
+        CarDTO carDTO = carService.toCarDTO(car);
+        CarDTO savedCar = carService.saveCarDTO(carDTO);
+        List<CarDTO> foundCars = carService.findCarsByBarcode(savedCar.getBarcode());
+
+        // Liste boş değil
+        assertFalse(foundCars.isEmpty(), "No cars found with the given barcode!");
+
+        // Liste sadece bir eleman içermeli
+        assertEquals(1, foundCars.size(), "Expected exactly one car but found " + foundCars.size());
+
+        // İlk elemanın barcode'u doğrulanıyor
+        assertEquals(savedCar.getBarcode(), foundCars.get(0).getBarcode());
     }
 
     @Test
     void deleteCar() {
-        CarDTO testObjectDTO = carService.toCarDTO(carObject);
-        CarDTO savedCarDTO = carService.saveCarDTO(testObjectDTO);
+        Car car = createTestCar();
+        CarDTO carDTO = carService.toCarDTO(car);
+        CarDTO savedCarDTO = carService.saveCarDTO(carDTO);
         carService.deleteCar(savedCarDTO.getBarcode());
-        List<CarDTO> foundCar = carService.findCarsByBarcode(savedCarDTO.getBarcode());
-        assertTrue(foundCar.isEmpty());
+        List<CarDTO> foundCars = carService.findCarsByBarcode(carDTO.getBarcode());
+        assertTrue(foundCars.isEmpty());
     }
-
 }
